--- a/wiki/License.wiki
+++ b/wiki/License.wiki
@@ -3,7 +3,7 @@
 The Chrome Developer Tools are distributed under the following license.
 
 {{{
-// Copyright (c) 2006-2008 The Chromium Authors. All rights reserved.
+// Copyright (c) 2009 The Chromium Authors. All rights reserved.
 //
 // Redistribution and use in source and binary forms, with or without
 // modification, are permitted provided that the following conditions are
