This CL introduces the "this" variable in the Variables view, and shows the line number in the stack frame label.
Review URL: http://codereview.chromium.org/99234

--- a/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -13,5 +13,6 @@ JsLineBreakpoint_MessageMarkerFormat=Line Breakpoint: {0} [line: {1}]
 JsThread_ThreadLabelFormat=Javascript Thread ({0}){1}
 JsThread_ThreadLabelRunning=Running
 JsThread_ThreadLabelSuspended=Suspended
+StackFrame_NameFormat={0} line: {1}
 Variable_NotScalarOrObjectFormat=Not scalar or object: {0}
 Variable_NullTypeForAVariable=null type for a variable
