Show line breakpoint info in the properties dialog
Review URL: http://codereview.chromium.org/108013

--- a/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
+++ b/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
@@ -3,3 +3,6 @@ JavascriptLineBreakpointPage_EnableCondition=Enable Condition
 JavascriptLineBreakpointPage_Enabled=Enabled
 JavascriptLineBreakpointPage_IgnoreCount=Ignore Count
 JavascriptLineBreakpointPage_IgnoreCountErrorMessage=Ignore count must be a positive integer
+JsLineBreakpointPage_LineNumberLabel=Line Number:
+JsLineBreakpointPage_ResourceLabel=Resource:
+JsLineBreakpointPage_UnknownLineNumber=<unknown>
