Edited wiki page through web user interface.

--- a/wiki/Versioning.wiki
+++ b/wiki/Versioning.wiki
@@ -1,4 +1,4 @@
-#summary Versioning of the !ChromeDevTools components
+#summary Versioning of the ChromeDevTools components
 #labels Phase-Design
 
 = Introduction =
