Debugger for Eclipse using the ChromeDevTools SDK
Review URL: http://codereview.chromium.org/119306

--- a/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -6,6 +6,7 @@ ChromiumTabSelectionDialog_DialogTitle=Select Tab to Debug
 ChromiumTabSelectionDialog_IdColumnName=ID
 ChromiumTabSelectionDialog_TableTitle=Available Tabs
 ChromiumTabSelectionDialog_UrlColumnName=Tab URL
+DebugTargetImpl_BadResultWhileDisconnecting=Received bad result from browser while disconnecting
 DebugTargetImpl_CannotStartMultipleDebuggers=Cannot start more than one instance of debugger
 DebugTargetImpl_FailedToStartSocketConnection=Failed to start socket transport
 DebugTargetImpl_TargetName=Chromium
@@ -13,6 +14,6 @@ JsLineBreakpoint_MessageMarkerFormat=Line Breakpoint: {0} [line: {1}]
 JsThread_ThreadLabelFormat=Javascript Thread ({0}){1}
 JsThread_ThreadLabelRunning=Running
 JsThread_ThreadLabelSuspended=Suspended
-StackFrame_NameFormat={0} line: {1}
+StackFrame_NameFormat={0} [{1}:{2}]
 Variable_NotScalarOrObjectFormat=Not scalar or object: {0}
 Variable_NullTypeForAVariable=null type for a variable
