--- a/trunk/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
+++ b/trunk/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
@@ -1,4 +1,3 @@
-ChromiumRemoteTab_BreakOnStartLabel=Break on Start
 ChromiumRemoteTab_PortLabel=Port:
-ChromiumRemoteTab_ProjectNameLabel=Project Name:
+ChromiumRemoteTab_ProjectNameLabel=Remote Scripts Project Name:
 ChromiumRemoteTab_RemoteTabName=Remote
