--- a/trunk/org.chromium.debug.ui/src/org/chromium/debug/ui/messages.properties
+++ b/trunk/org.chromium.debug.ui/src/org/chromium/debug/ui/messages.properties
@@ -1,9 +1,10 @@
-ChromiumDebugUIPlugin_Info=Info
-ChromiumDebugUIPlugin_Warning=Warning
 # Copyright (c) 2009 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
 ChromiumDebugUIPlugin_Error=Error
+ChromiumDebugUIPlugin_Warning=Warning
+ChromiumDebugUIPlugin_Info=Info
+JsDebugModelPresentation_OutOfSyncLabel=[out of sync]
 JsWatchExpressionDelegate_BadStackStructureWhileEvaluating=Bad stack structure encountered while evaluating
 JsWatchExpressionDelegate_ErrorEvaluatingExpression=Error evaluating expression
