Wiki: corrected the "qualifier" segment format and project components

--- a/wiki/Versioning.wiki
+++ b/wiki/Versioning.wiki
@@ -6,8 +6,9 @@
 As the !ChromeDevTools project evolves, there is a need to consistently keep track of each component version. Currently the components are:
   * ChromeDevToolsProtocol
   * ChromeDevToolsSdk (depends on the protocol)
-  * Eclipse Debugger Plugins (depends on the SDK)
-  * Eclipse Debugger Feature (includes the Plugins)
+  * !ChromeDevTools SDK Feature (includes the SDK plugin)
+  * Eclipse Debugger Plugins (depends on the SDK plugins)
+  * Eclipse Debugger Feature (includes the debugger plugins, depends on the SDK feature)
 
 As the physical components (all but the protocol) are OSGi bundles developed using the Eclipse IDE, they will use the [http://wiki.eclipse.org/index.php/Version_Numbering following] versioning scheme endorsed by the Eclipse developers.
 
@@ -28,19 +29,19 @@ According to the referenced scheme, an OSGi bundle version identifier format is 
 major.minor.service.qualifier
 }}}
 
-An incrementing counter starting with "0" will be used as the "qualifier" segment.
+A timestamp (YYYYMMDDHHmm) will be used as the "qualifier" segment for the plugins and features.
 
 == !ChromeDevTools SDK ==
   * The "major" segment will change when the SDK API is broken.
   * The "minor" segment will change when there are major improvements (not bugfixes) to the underlying implementation.
   * The "service" segment will change when there are bugfixes.
-  * The "qualifier" segment will change when there are changes that do not directly count towards a new release but are worth to be exposed in the development stream.
+  * The "qualifier" segment is automatically generated during every build.
 
 == Eclipse Debugger Plugins ==
   * The "major" segment will always be the same as that of the SDK version used.
   * The "minor" segment will change when there are major user-facing improvements
   * The "service" segment will change when there are bugfixes.
-  * The "qualifier" segment will change when there are changes that do not directly count towards a new release but are worth to be exposed in the development stream.
+  * The "qualifier" segment is automatically generated during every build.
 
 == Eclipse Debugger Feature ==
 The feature versioning is consistent with these [http://wiki.eclipse.org/index.php/Version_Numbering#Versioning_features Feature Versioning Guidelines].
