--- a/wiki/Versioning.wiki
+++ b/wiki/Versioning.wiki
@@ -1,28 +1,25 @@
 #summary Versioning of the ChromeDevTools components
 #labels Phase-Design
 
-= Introduction =
+= Background =
 
-As the !ChromeDevTools project evolves, there is a need to consistently keep track of each component version. Currently the components are:
-  * ChromeDevToolsProtocol
-  * ChromeDevToolsSdk (depends on the protocol)
-  * !ChromeDevTools SDK Feature (includes the SDK plugin)
-  * Eclipse Debugger Plugins (depends on the SDK plugins)
-  * Eclipse Debugger Feature (includes the debugger plugins, depends on the SDK feature)
+As the ChromeDevTools project evolves, it is necessary to consistently keep track of each component version.
 
-As the physical components (all but the protocol) are OSGi bundles developed using the Eclipse IDE, they will use the [http://wiki.eclipse.org/index.php/Version_Numbering following] versioning scheme endorsed by the Eclipse developers.
+Since the physical components are OSGi bundles developed using the Eclipse IDE, they will use the [http://wiki.eclipse.org/index.php/Version_Numbering following] versioning scheme endorsed by the Eclipse developers.
 
-= !ChromeDevTools Protocol =
+= Component Versioning =
+
+== ChromeDevToolsProtocol ==
 
 The protocol version consists of only two segments:
 {{{
 major.minor
 }}}
 
-  * The "major" segment will change when the protocol is broken (e.g. the message format or existing command specifications are changed).
-  * The "minor" segment will change in all other cases (e.g. new commands are added or unimplemented features are implemented).
+  * The "major" segment will change when the protocol is broken (e.g. the message format or existing command specifications are changed.)
+  * The "minor" segment will change in all other cases (e.g. new commands are added or unimplemented features are implemented.)
 
-= OSGi bundles =
+== OSGi bundles ==
 
 According to the referenced scheme, an OSGi bundle version identifier format is this:
 {{{
@@ -31,17 +28,17 @@ major.minor.service.qualifier
 
 A timestamp (YYYYMMDDHHmm) will be used as the "qualifier" segment for the plugins and features.
 
-== !ChromeDevTools SDK ==
+=== ChromeDevToolsSdk ===
   * The "major" segment will change when the SDK API is broken.
   * The "minor" segment will change when there are major improvements (not bugfixes) to the underlying implementation.
   * The "service" segment will change when there are bugfixes.
   * The "qualifier" segment is automatically generated during every build.
 
-== Eclipse Debugger Plugins ==
+=== EclipseDebugger Plugins ===
   * The "major" segment will always be the same as that of the SDK version used.
   * The "minor" segment will change when there are major user-facing improvements
   * The "service" segment will change when there are bugfixes.
   * The "qualifier" segment is automatically generated during every build.
 
-== Eclipse Debugger Feature ==
+=== EclipseDebugger and ChromeDevToolsSdk Features ===
 The feature versioning is consistent with these [http://wiki.eclipse.org/index.php/Version_Numbering#Versioning_features Feature Versioning Guidelines].
