--- a/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -8,8 +8,11 @@ ChromiumTabSelectionDialog_TableTitle=Available Tabs
 ChromiumTabSelectionDialog_UrlColumnName=Tab URL
 DebugTargetImpl_BadResultWhileDisconnecting=Received bad result from browser while disconnecting
 DebugTargetImpl_CannotStartMultipleDebuggers=Cannot start more than one instance of debugger
+DebugTargetImpl_Caught=Caught
 DebugTargetImpl_FailedToStartSocketConnection=Failed to start socket transport
+DebugTargetImpl_LogExceptionFormat={0} {1} (in {2}:{3}): {4}
 DebugTargetImpl_TargetName=Chromium
+DebugTargetImpl_Uncaught=Uncaught
 JsLineBreakpoint_MessageMarkerFormat=Line Breakpoint: {0} [line: {1}]
 JsThread_ThreadLabelFormat=Javascript Thread ({0}){1}
 JsThread_ThreadLabelRunning=Running
