Rename visible "Google Chrome" into Chromium
Review URL: http://codereview.chromium.org/146025

--- a/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -11,7 +11,7 @@ DebugTargetImpl_CannotStartMultipleDebuggers=Cannot start more than one instance
 DebugTargetImpl_Caught=Caught
 DebugTargetImpl_FailedToStartSocketConnection=Failed to start socket transport
 DebugTargetImpl_LogExceptionFormat={0} {1} (in {2}:{3}): {4}
-DebugTargetImpl_TargetName=Google Chrome
+DebugTargetImpl_TargetName=Chromium
 DebugTargetImpl_Uncaught=Uncaught
 JsLineBreakpoint_MessageMarkerFormat=Line Breakpoint: {0} [line: {1}]
 JsThread_ThreadLabelFormat=Javascript Thread ({0}){1}
