--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
@@ -1,4 +1,4 @@
-ExpressionEvaluator_CannotEvaluateWhenNotSuspended=Javascript Thread not suspended. Cannot perform evaluation.
+ExpressionEvaluator_CannotEvaluateWhenNotSuspended=JavaScript thread not suspended. Cannot perform evaluation.
 ExpressionEvaluator_ErrorEvaluatingExpression=Error evaluating expression
 ExpressionEvaluator_ErrorInspectingObject=Error inspecting object
 ExpressionEvaluator_EvaluationThreadInterrupted=Evaluation thread interrupted
