--- a/wiki/EclipseDebugger.wiki
+++ b/wiki/EclipseDebugger.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-An essential part of Chrome Developer Tools is the remote Javascript debugger for Eclipse, based on the ChromeDevToolsSdk. The debugger employs the Eclipse Platform debug and launch frameworks to provide most of the functionality.
+An essential part of the Google Chrome Developer Tools is the remote JavaScript debugger for Eclipse, based on the ChromeDevToolsSdk. The debugger employs the Eclipse Platform debug and launch frameworks to provide most of the functionality.
 
 The latest debugger version can be installed from the following update site:
 
@@ -22,8 +22,8 @@ The debugger exposes the following Javascript debugging capabilities, starting w
   * In-memory browser script storage
 
 = Known issues =
-  * Problems with duplicate scripts for the same resource provided by V8.
-  * Only V8-provided scripts are shown rather than actual resources loaded by Chrome (the resources are not exposed through the V8 debugger protocol).
+  * Duplicate scripts can be loaded from V8 for the same resource.
+  * Only V8-provided scripts are shown rather than actual resources loaded by the browser (the resources are not exposed through the V8 debugger protocol).
   * The launch target is invalidated rather than reloaded whenever the page is refreshed (need to re-attach).
   * Poor text editor for rendering scripts (no highlighting, no nothing).
   * The breakpoints are not retained between page refreshes (V8 does not curently expose existing breakpoints).
