--- a/wiki/EclipseDebugger.wiki
+++ b/wiki/EclipseDebugger.wiki
@@ -2,12 +2,12 @@
 
 = Introduction =
 
-An essential part of the Google Chrome Developer Tools is the remote JavaScript debugger for Eclipse, based on the ChromeDevToolsSdk. The debugger employs the Eclipse Platform debug and launch frameworks to provide most of the functionality.
+An essential part of the Google Chrome Developer Tools is the remote !JavaScript debugger for Eclipse, based on the ChromeDevToolsSdk. The debugger employs the Eclipse Platform debug and launch frameworks to provide most of the functionality.
 
 The latest debugger version can be installed from the following update site:
 
 {{{
-https://chromedevtools.googlecode.com/svn/update/dev/
+http://chromedevtools.googlecode.com/svn/update/dev/
 }}}
 
 = Features =
