--- a/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -18,5 +18,6 @@ JsThread_ThreadLabelFormat=JavaScript Thread ({0}){1}
 JsThread_ThreadLabelRunning=Running
 JsThread_ThreadLabelSuspended=Suspended
 StackFrame_NameFormat={0} [{1}:{2}]
+StackFrame_UnknownScriptName=<unknown>
 Variable_NotScalarOrObjectFormat=Not scalar or object: {0}
 Variable_NullTypeForAVariable=null type for a variable
