Change layout of launch configuration dialog and add error messages Review URL: http://codereview.chromium.org/149767

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
@@ -1,3 +1,5 @@
 ChromiumRemoteTab_PortLabel=Port:
 ChromiumRemoteTab_ProjectNameLabel=Remote Scripts Project Name:
 ChromiumRemoteTab_RemoteTabName=Remote
+ChromiumRemoteTab_InvalidPortNumberError=Invalid port number
+ChromiumRemoteTab_InvalidProjectNameError=Invalid remote script project name
