--- a/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -17,6 +17,7 @@ JsLineBreakpoint_MessageMarkerFormat=Line Breakpoint: {0} [line: {1}]
 JsThread_ThreadLabelFormat=JavaScript Thread ({0}){1}
 JsThread_ThreadLabelRunning=Running
 JsThread_ThreadLabelSuspended=Suspended
+ResourceManager_UnnamedScriptName=(program)
 StackFrame_NameFormat={0} [{1}:{2}]
 StackFrame_UnknownScriptName=<unknown>
 Variable_NotScalarOrObjectFormat=Not scalar or object: {0}
